{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 135,
  "lineage": "5254b98c-a42a-dd60-9c5f-193582cf9598",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "mgmt",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.100.0/24"
            ],
            "address_spaces": [
              "192.168.100.0/24"
            ],
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/management/providers/Microsoft.Network/virtualNetworks/mgmt-vnet",
            "location": "westeurope",
            "name": "mgmt-vnet",
            "resource_group_name": "management",
            "subnets": [
              "Management"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vmss",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "address_spaces": [
              "172.16.0.0/16"
            ],
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet",
            "location": "eastus",
            "name": "checkpoint-vmss-vnet",
            "resource_group_name": "checkpoint-vmss-terraform",
            "subnets": [
              "Backend",
              "Frontend"
            ],
            "vnet_peerings": {
              "vmss2mgmt": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/management/providers/Microsoft.Network/virtualNetworks/mgmt-vnet"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "backend-lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/frontendIPConfigurations/backend-lb",
                "name": "backend-lb",
                "private_ip_address": "172.16.2.4",
                "private_ip_address_allocation": "Static",
                "subnet_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Backend"
              }
            ],
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb",
            "location": "eastus",
            "name": "backend-lb",
            "private_ip_address": "172.16.2.4",
            "private_ip_addresses": [
              "172.16.2.4"
            ],
            "resource_group_name": "checkpoint-vmss-terraform",
            "sku": "Standard"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "frontend-lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb/frontendIPConfigurations/checkpoint-vmss-terraform-app-1",
                "name": "checkpoint-vmss-terraform-app-1",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/publicIPAddresses/checkpoint-vmss-terraform-app-1"
              }
            ],
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb",
            "location": "eastus",
            "name": "frontend-lb",
            "resource_group_name": "checkpoint-vmss-terraform",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_public_ip.public-ip-lb",
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend-lb-pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/backendAddressPools/backend-lb-pool",
            "loadbalancer_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb",
            "name": "backend-lb-pool",
            "resource_group_name": "checkpoint-vmss-terraform"
          },
          "dependencies": [
            "azurerm_lb.backend-lb",
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "frontend-lb-pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb/backendAddressPools/checkpoint-vmss-terraform-app-1",
            "loadbalancer_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb",
            "name": "checkpoint-vmss-terraform-app-1",
            "resource_group_name": "checkpoint-vmss-terraform"
          },
          "dependencies": [
            "azurerm_lb.frontend-lb",
            "azurerm_public_ip.public-ip-lb",
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "azure_lb_healprob",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb/probes/checkpoint-vmss-terraform-app-1",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb",
            "name": "checkpoint-vmss-terraform-app-1",
            "number_of_probes": 2,
            "port": 8117,
            "protocol": "Tcp",
            "resource_group_name": "checkpoint-vmss-terraform"
          },
          "dependencies": [
            "azurerm_lb.backend-lb",
            "azurerm_lb.frontend-lb",
            "azurerm_public_ip.public-ip-lb",
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/probes/backend-lb",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb",
            "name": "backend-lb",
            "number_of_probes": 2,
            "port": 8117,
            "protocol": "Tcp",
            "resource_group_name": "checkpoint-vmss-terraform"
          },
          "dependencies": [
            "azurerm_lb.backend-lb",
            "azurerm_lb.frontend-lb",
            "azurerm_public_ip.public-ip-lb",
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbnatrule",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb/backendAddressPools/checkpoint-vmss-terraform-app-1",
            "backend_port": 8081,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb/frontendIPConfigurations/checkpoint-vmss-terraform-app-1",
            "frontend_ip_configuration_name": "checkpoint-vmss-terraform-app-1",
            "frontend_port": 80,
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb/loadBalancingRules/checkpoint-vmss-terraform-app-1",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb",
            "name": "checkpoint-vmss-terraform-app-1",
            "probe_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb/probes/checkpoint-vmss-terraform-app-1",
            "protocol": "Tcp",
            "resource_group_name": "checkpoint-vmss-terraform"
          },
          "dependencies": [
            "azurerm_lb.backend-lb",
            "azurerm_lb.frontend-lb",
            "azurerm_lb_backend_address_pool.backend-lb-pool",
            "azurerm_lb_backend_address_pool.frontend-lb-pool",
            "azurerm_lb_probe.azure_lb_healprob",
            "azurerm_public_ip.public-ip-lb",
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/backendAddressPools/backend-lb-pool",
            "backend_port": 0,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/frontendIPConfigurations/backend-lb",
            "frontend_ip_configuration_name": "backend-lb",
            "frontend_port": 0,
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/loadBalancingRules/backend-lb",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb",
            "name": "backend-lb",
            "probe_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/probes/backend-lb",
            "protocol": "All",
            "resource_group_name": "checkpoint-vmss-terraform"
          },
          "dependencies": [
            "azurerm_lb.backend-lb",
            "azurerm_lb.frontend-lb",
            "azurerm_lb_backend_address_pool.backend-lb-pool",
            "azurerm_lb_backend_address_pool.frontend-lb-pool",
            "azurerm_lb_probe.azure_lb_healprob",
            "azurerm_public_ip.public-ip-lb",
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network-security-group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/networkSecurityGroups/checkpoint-vmss-terraform_nsg",
            "location": "eastus",
            "name": "checkpoint-vmss-terraform_nsg",
            "resource_group_name": "checkpoint-vmss-terraform",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.network-security-group",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow all inbound connections",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "0-65535"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/networkSecurityGroups/checkpoint-vmss-terraform_nsg/securityRules/AllowAllInBound",
            "name": "AllowAllInBound",
            "network_security_group_name": "checkpoint-vmss-terraform_nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "checkpoint-vmss-terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "",
            "source_port_ranges": [
              "0-65535"
            ]
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public-ip-lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "checkpoint-vmss-terraform-frontend-lb",
            "fqdn": "checkpoint-vmss-terraform-frontend-lb.eastus.cloudapp.azure.com",
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/publicIPAddresses/checkpoint-vmss-terraform-app-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.146.54.165",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "checkpoint-vmss-terraform-app-1",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "checkpoint-vmss-terraform",
            "sku": "Standard"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "backend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/routeTables/Backend",
            "location": "eastus",
            "name": "Backend",
            "resource_group_name": "checkpoint-vmss-terraform",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "To-Internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "None"
              }
            ],
            "subnets": [],
            "tags": {}
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "frontend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/routeTables/Frontend",
            "location": "eastus",
            "name": "Frontend",
            "resource_group_name": "checkpoint-vmss-terraform",
            "route": [
              {
                "address_prefix": "172.16.1.0/24",
                "name": "Local-Subnet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "172.16.0.0/16",
                "name": "To-Internal",
                "next_hop_in_ip_address": "",
                "next_hop_type": "None"
              }
            ],
            "subnets": [],
            "tags": {}
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Frontend",
            "name": "Frontend",
            "resource_group_name": "checkpoint-vmss-terraform",
            "virtual_network_name": "checkpoint-vmss-vnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Backend",
            "name": "Backend",
            "resource_group_name": "checkpoint-vmss-terraform",
            "virtual_network_name": "checkpoint-vmss-vnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "backend_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Backend",
            "route_table_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/routeTables/Backend",
            "subnet_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Backend"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_route_table.backend",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "frontend_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Frontend",
            "route_table_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/routeTables/Frontend",
            "subnet_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Frontend"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_route_table.frontend",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet",
            "location": "eastus",
            "name": "checkpoint-vmss-vnet",
            "resource_group_name": "checkpoint-vmss-terraform"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/virtualNetworkPeerings/vmss2mgmt",
            "name": "vmss2mgmt",
            "remote_virtual_network_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/management/providers/Microsoft.Network/virtualNetworks/mgmt-vnet",
            "resource_group_name": "checkpoint-vmss-terraform",
            "use_remote_gateways": false,
            "virtual_network_name": "checkpoint-vmss-vnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/management/providers/Microsoft.Network/virtualNetworks/mgmt-vnet/virtualNetworkPeerings/mgmt2vmss",
            "name": "mgmt2vmss",
            "remote_virtual_network_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet",
            "resource_group_name": "management",
            "use_remote_gateways": false,
            "virtual_network_name": "mgmt-vnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_route_table.backend",
            "module.vnet.azurerm_route_table.frontend",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_subnet_route_table_association.backend_association",
            "module.vnet.azurerm_subnet_route_table_association.frontend_association",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}